project/test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: "shared-alb"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:334617736223:certificate/70abfa44-16a3-40f8-83a7-720384367331
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    
    # Header-based routing condition for staging-admin-service
    alb.ingress.kubernetes.io/conditions.staging-admin-service: |
      [{
        "field": "http-header",
        "httpHeaderConfig": {
          "httpHeaderName": "Referer",
          "values": ["http://admin-staging.sidsfarm.in/"]
        }
      }]
    
    # Header-based routing condition for App-Version
    alb.ingress.kubernetes.io/conditions.staging-backend-web: |
      [{
        "field": "http-header",
        "httpHeaderConfig": {
          "httpHeaderName": "App-Version",
          "values": ["3.2.0"]
        }
      }]

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: staging-admin-service
            port:
              number: 80
  
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: staging-backend-web
            port:
              number: 80
  
      - path: /api/v1/otp/
        pathType: Prefix
        backend:
          service:
            name: staging-otp-redirection-service
            port:
              number: 80

      - path: /api/v1/b2b/sendotp
        pathType: Exact
        backend:
          service:
            name: staging-otp-redirection-service
            port:
              number: 80

      - path: /api/v1/mojro/delivery_info
        pathType: Exact
        backend:
          service:
            name: staging-mojro-delivery-service
            port:
              number: 80

  - host: staging-api.sidsfarm.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: staging-backend-web-service
            port:
              number: 80

  - host: rabbitmq-staging.sidsfarm.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-service
            port:
              number: 15672  # Management UI

  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: staging-backend-web-service-previous
            port:
              number: 80
